[gd_scene load_steps=8 format=3 uid="uid://bremx77uh6mpb"]

[ext_resource type="Script" path="res://scences/cores/coreui.gd" id="1_ouyvs"]
[ext_resource type="Texture2D" uid="uid://dytq0eumwvky6" path="res://assets/objects/anvil.png" id="1_q8ods"]
[ext_resource type="Shader" path="res://assets/misc/white.gdshader" id="2_j3t8l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6iob4"]
shader = ExtResource("2_j3t8l")

[sub_resource type="Animation" id="Animation_8h1qj"]
resource_name = "Flash"
length = 0.4
step = 0.0005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(2, -2, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(2, -2, 0.5),
"update": 1,
"values": [null, SubResource("ShaderMaterial_6iob4"), null]
}

[sub_resource type="Animation" id="Animation_84w58"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iwbai"]
_data = {
"Flash": SubResource("Animation_8h1qj"),
"RESET": SubResource("Animation_84w58")
}

[node name="CoreUI" type="Control"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ouyvs")

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
pivot_offset = Vector2(8, 8)
texture = ExtResource("1_q8ods")
expand_mode = 1
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_iwbai")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="show_tooltip"]
[connection signal="mouse_exited" from="." to="." method="hide_tooltip"]
